Fixed issue with horizontal scroll on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600');
 
-html {
-  overflow-x: hidden;
-}
-
 body {
   display: flex;
   min-height: 100vh;
@@ -20,6 +16,7 @@ body {
 
 #root {
   flex: 1 0 auto;
+  overflow-x: hidden;
 }
 
 .remove-float {
